force-app/main/default/objects/Medical_Event__c/Medical_Event__c.object-meta.xml
<CustomObject>
    <label>Medical Event</label>
    <nameField>
        <displayFormat>EVT-{0000}</displayFormat>
        <label>Event #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>