force-app/main/default/objects/Medical_Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>Data e hora de término programada para o evento.</description>
    <inlineHelpText>Informe o dia e o horário que o evento encerra.</inlineHelpText>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>