force-app/main/default/objects/Medical_Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o evento é transmitido ao vivo/online.</description>
    <inlineHelpText>Marque se o evento for uma transmissão em tempo real.</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>