force-app/main/default/objects/Medical_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento que indica onde o evento ocorrerá.</description>
    <inlineHelpText>Selecione o local onde o evento será realizado.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Medical Events</relationshipLabel>
    <relationshipName>Medical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>