force-app/main/default/objects/Medical_Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>Fórmula que puxa o status de verificação do objeto Location.</description>
    <formula>Location__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica se o local escolhido é um endereço verificado.</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>