force-app/main/default/objects/Medical_Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>Capacidade máxima de participantes permitida.</description>
    <inlineHelpText>Digite o número total de vagas disponíveis.</inlineHelpText>
    <label>Max Seats</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>