force-app/main/default/objects/Medical_Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Título ou nome descritivo do evento médico.</description>
    <inlineHelpText>Digite o nome do workshop, palestra ou consulta.</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>