force-app/main/default/objects/Medical_Event__c/fields/People_Attending__c.field-meta.xml
<CustomField>
    <fullName>People_Attending__c</fullName>
    <description>Campo de resumo que conta o total de inscritos vinculados.</description>
    <inlineHelpText>Total de participantes confirmados para este evento.</inlineHelpText>
    <label># People Attending</label>
    <summaryForeignKey>Event_Attendee__c.Medical_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>