force-app/main/default/objects/Medical_Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o evento ocorre periodicamente.</description>
    <inlineHelpText>Marque se este evento se repete em datas futuras.</inlineHelpText>
    <label>Recurring?</label>
    <type>Checkbox</type>
</CustomField>