force-app/main/default/objects/Medical_Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description>Fórmula que calcula vagas livres (Vagas Máximas - Inscritos).</description>
    <formula>Max_Seats__c -  People_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantidade de vagas que ainda podem ser preenchidas.</inlineHelpText>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>