force-app/main/default/objects/Medical_Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Data e hora de início programada para o evento.</description>
    <inlineHelpText>Informe o dia e o horário que o evento começa.</inlineHelpText>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>