force-app/main/default/objects/Medical_Event__c/validationRules/End_Date_At_Least_One_Day_Ahead.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_At_Least_One_Day_Ahead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End__c)),
    NOT(ISBLANK(Start__c)),
    End__c &lt; (Start__c + 1)
)</errorConditionFormula>
    <errorMessage>A data/hora final deve ser pelo menos 1 dia depois da data/hora inicial.</errorMessage>
</ValidationRule>