force-app/main/default/objects/Medical_Event__c/validationRules/End_Date_One_Day_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_One_Day_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT (ISBLANK (End__c)), End__c &lt; Start__c + 1)</errorConditionFormula>
    <errorMessage>A data/hora final deve ser pelo menos 1 dia depois da data/hora inicial.</errorMessage>
</ValidationRule>