force-app/main/default/objects/Medical_Event__c/validationRules/In_Person_Location_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Person_Location_Required</fullName>
    <active>true</active>
    <description>Se o Event Type for In-Person, o campo Location deve ser preenchido.</description>
    <errorConditionFormula>AND(
    TEXT(Event_Type__c) = &apos;In-Person&apos;,
    ISBLANK(Location__c)
)</errorConditionFormula>
    <errorMessage>Eventos presenciais precisam ter Location preenchido.</errorMessage>
</ValidationRule>