force-app/main/default/objects/Medical_Event__c/validationRules/Nome_Evento_Obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Nome_Evento_Obrigatorio</fullName>
    <active>true</active>
    <description>Impede salvar evento médico sem nome.</description>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Informe o nome do evento médico antes de salvar.</errorMessage>
</ValidationRule>