force-app/main/default/objects/Medical_Event__c/validationRules/Virtual_No_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_No_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Event_Type__c, &quot;Virtual&quot;),
  NOT(ISBLANK(Location__c))
)</errorConditionFormula>
    <errorMessage>Eventos virtuais não podem ter Location preenchido.</errorMessage>
</ValidationRule>